--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,35 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created a chunk of size 1107, which is longer than the specified 300\n",
-      "Created a chunk of size 387, which is longer than the specified 300\n",
-      "Created a chunk of size 663, which is longer than the specified 300\n",
-      "Created a chunk of size 444, which is longer than the specified 300\n",
-      "Created a chunk of size 626, which is longer than the specified 300\n",
-      "Created a chunk of size 1946, which is longer than the specified 300\n",
-      "Created a chunk of size 1437, which is longer than the specified 300\n",
-      "Created a chunk of size 829, which is longer than the specified 300\n",
-      "Created a chunk of size 612, which is longer than the specified 300\n",
-      "Created a chunk of size 707, which is longer than the specified 300\n",
-      "Created a chunk of size 1182, which is longer than the specified 300\n",
-      "Created a chunk of size 368, which is longer than the specified 300\n",
-      "Created a chunk of size 781, which is longer than the specified 300\n"
+      "Created a chunk of size 339, which is longer than the specified 300\n",
+      "Created a chunk of size 360, which is longer than the specified 300\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "18"
+       "[Document(page_content='Call me Ishmael. Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the ocean with me.', metadata={'source': './files/moby_dick.txt'}),\n",
+       " Document(page_content='Call me Ishmael. Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the ocean with me.', metadata={'source': './files/moby_dick.txt'}),\n",
+       " Document(page_content='Call me Ishmael. Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the ocean with me.', metadata={'source': './files/moby_dick.txt'}),\n",
+       " Document(page_content='Call me Ishmael. Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the ocean with me.', metadata={'source': './files/moby_dick.txt'})]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,15 +31,33 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.document_loaders import UnstructuredFileLoader\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
+    "from langchain.vectorstores import Chroma\n",
+    "from langchain.storage import LocalFileStore\n",
     "\n",
-    "splitter = CharacterTextSplitter(\n",
+    "cache_dir = LocalFileStore(\"./.cache/\")\n",
+    "\n",
+    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
     "    separator=\"\\n\",\n",
     "    chunk_size=300,\n",
     "    chunk_overlap=50,\n",
     ")\n",
     "\n",
-    "loader = UnstructuredFileLoader(\"./files/moby_dick.pdf\")\n",
-    "len(loader.load_and_split(text_splitter=splitter))"
+    "loader = UnstructuredFileLoader(\"./files/moby_dick.txt\")\n",
+    "\n",
+    "docs = loader.load_and_split(text_splitter=splitter)\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(\n",
+    "    model = \"text-embedding-3-small\"\n",
+    ")\n",
+    "\n",
+    "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(\n",
+    "    embeddings, cache_dir\n",
+    ")\n",
+    "\n",
+    "vectorstore = Chroma.from_documents(docs, cached_embeddings)\n",
+    "\n",
+    "vectorstore.similarity_search(\"What does Ishmael do?\")"
    ]
   }
  ],
